--- a/Practica/01/README
+++ b/Practica/01/README
@@ -1,3 +1,13 @@
-# Primera práctica
+# Primera práctica: Lógica Booleana
 
-## NOT
+En esta práctica  se implementó el uso de compuertas lógicas básicas utilizando el software nand2tetris, con el apoyo de Visual Studio. 
+El objetivo es comprender y diseñar compuertas lógicas fundamentales, como NOT, AND, OR, XOR, entre otras, utilizando únicamente la puerta lógica NAND como base. Para comenzar, descargamos el software nand2tetris, que nos proporciona una plataforma interactiva, incluyendo hardware y software. 
+Con la ayuda de Visual Studio, un entorno de desarrollo integrado (IDE), editaremos y escribiremos el código necesario para implementar las compuertas lógicas. Visual Studio ofrece herramientas poderosas para la escritura de código, depuración y gestión de proyectos, lo que facilita enormemente el proceso de desarrollo. 
+Una vez que tenemos el entorno preparado, comenzamos a diseñar nuestras compuertas lógicas. La elección de la puerta NAND como base se debe a su capacidad para implementar cualquier otra compuerta lógica. Utilizamos el lenguaje de descripción de hardware (HDL) proporcionado por nand2tetris para escribir el código que define el comportamiento de nuestras compuertas. Después de escribir el código en Visual Studio, lo probamos en el entorno de simulación de nand2tetris. Esta fase es importante para verificar que nuestras compuertas funcionen correctamente según las especificaciones lógicas esperadas. Si hay errores, volvemos al código en Visual Studio para corregirlos y luego repetimos el proceso de prueba.
+
+#AND
+
+La compuerta AND, también llamada "todo o nada", se representa en el álgebra Booleana mediante una operación de multiplicación. Esto significa que para que la salida de la compuerta sea activa, todas sus entradas deben estar en estado binario 1. Si alguna entrada está inactiva (en estado "0"), la salida será 0.
+
+#NOT
+
